--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta property="og:url" content="https://dbots-js.github.io/dbots-website/" />
+  <meta property="og:url" content="https://dbots-js.github.io/" />
   <meta property="og:title" content="Dbots" />
   <meta property="og:description" content="The universal count poster" />
-  <meta property="og:image" content="https://dbots-js.github.io/dbots-website/static/logo.png" />
+  <meta property="og:image" content="https://dbots-js.github.io/static/logo.png" />
   <link rel="manifest" href="<%= BASE_URL %>manifest.json" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   <link rel="stylesheet" type="text/css"
