--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>dbots</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta property="og:url" content="https://dbots-js.github.io/" />
+    <meta property="og:title" content="Dbots" />
+    <meta property="og:description" content="The universal count poster" />
+    <meta
+      property="og:image"
+      content="https://dbots-js.github.io/static/logo.png"
+    />
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"
+      async
+    ></script>
+  </head>
 
-<head>
-  <title>dbots</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta property="og:url" content="https://dbots-pkg.github.io/" />
-  <meta property="og:title" content="Dbots" />
-  <meta property="og:description" content="The universal count poster" />
-  <meta property="og:image" content="https://dbots-pkg.github.io/static/logo.png" />
-  <link rel="manifest" href="<%= BASE_URL %>manifest.json" />
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-  <link rel="stylesheet" type="text/css"
-    href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"
-    async></script>
-</head>
-
-<body>
-  <noscript>
-    <strong>Sorry, but the dbots website doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <script>
-    if ('serviceWorker' in navigator) {
-      try {
-        navigator.serviceWorker.register('/sw.js');
-      } catch (e) {
-        console.error('Error registering service worker', e);
+  <body>
+    <noscript>
+      <strong>Sorry, but the dbots website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <script>
+      if ("serviceWorker" in navigator) {
+        try {
+          navigator.serviceWorker.register("/sw.js");
+        } catch (e) {
+          console.error("Error registering service worker", e);
+        }
       }
-    }
-  </script>
-  <!-- built files will be auto injected -->
-</body>
-
+    </script>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
