--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta property="og:url" content="https://dbots-js.github.io/" />
-    <meta property="og:title" content="Dbots" />
-    <meta property="og:description" content="The universal count poster" />
-    <meta
-      property="og:image"
-      content="https://dbots-js.github.io/static/logo.png"
-    />
-    <link rel="manifest" href="<%= BASE_URL %>manifest.json" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <!-- Twitter & OpenGraph data -->
+    <meta name="twitter:title" content="dbots.js">
+    <meta property="og:site_name" content="dbots.js">
+    <meta property="og:url" content="https://dbots.js.org/" />
+    <meta property="og:title" content="dbots.js" />
+    <meta property="og:description" content="A stats poster and API wrapper for all botlists." />>
+
+    <!-- Image meta -->
+    <meta name="twitter:image" content="https://dbots.js.org/assets/cover.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="https://dbots.js.org/assets/cover.png">
+    <meta property="og:image:secure" content="https://dbots.js.org/assets/cover.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="dbots.js Cover">
+
+  
+    <!-- Other meta data -->
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta name="theme-color" content="#7fb4b9">
+    <meta name="revisit-after" content="2 days">
+    <meta name="keywords" content="framework, css, easy-to-use, scss, modestacss, clean, flat, modern">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>assets/logo.png">
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json"/>
+
     <link
       rel="stylesheet"
       type="text/css"
