--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <meta property="og:description" content="A stats poster and API wrapper for all botlists." />>
 
     <!-- Image meta -->
-    <meta name="twitter:image" content="https://dbots.js.org/assets/cover.png">
+    <meta name="twitter:image" content="https://dbots.js.org/static/cover.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="https://dbots.js.org/assets/cover.png">
-    <meta property="og:image:secure" content="https://dbots.js.org/assets/cover.png">
+    <meta property="og:image" content="https://dbots.js.org/static/cover.png">
+    <meta property="og:image:secure" content="https://dbots.js.org/static/cover.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:alt" content="dbots.js Cover">
 
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#7fb4b9">
     <meta name="revisit-after" content="2 days">
     <meta name="keywords" content="framework, css, easy-to-use, scss, modestacss, clean, flat, modern">
-    <link rel="icon" type="image/png" href="<%= BASE_URL %>assets/logo.png">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>static/logo.png">
     <link rel="manifest" href="<%= BASE_URL %>manifest.json"/>
 
     <link
