--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
   <!-- Other meta data -->
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
-  <meta name="theme-color" content="#7fb4b9">
+  <meta name="theme-color" content="#e9df12">
   <meta name="revisit-after" content="2 days">
   <meta name="keywords" content="framework, css, easy-to-use, scss, modestacss, clean, flat, modern">
-  <link rel="icon" type="image/png" href="<%= BASE_URL %>static/logo.png">
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>static/logo-simplified.png">
   <link rel="manifest" href="<%= BASE_URL %>manifest.json" />
 
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
